Bug 334812 - Enabled/disabled state for effects altered via the KCM does not persist across sessions
Summary: Enabled/disabled state for effects altered via the KCM does not persist acros...
Status: RESOLVED FIXED
Alias: None
Product: kwin
Classification: Plasma
Component: compositing (other bugs)
Version First Reported In: git master
Platform: unspecified Linux
: NOR normal
Target Milestone: ---
Assignee: KWin default assignee
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2014-05-15 13:01 UTC by Eike Hein
Modified: 2014-05-15 15:15 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Possible patch (864 bytes, patch)
2014-05-15 13:35 UTC, Martin Flöser
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Eike Hein 2014-05-15 13:01:22 UTC
Disabling an effect in the KCM does disable it at runtime, but in the next session, it comes back enabled.

Specifically, my test cases are the fade effect, the sliding popups effect and the minimize and maximize animation effects.

Reproducible: Always
Comment 1 Martin Flöser 2014-05-15 13:35:47 UTC
Created attachment 86647 [details]
Possible patch

Please try this patch
Comment 2 Eike Hein 2014-05-15 14:04:40 UTC
Appears fixed, ship it!
Comment 3 Martin Flöser 2014-05-15 15:15:20 UTC
Git commit 220c3caf140ff557796ee75947607e1726a1a60b by Martin Gräßlin.
Committed on 15/05/2014 at 15:10.
Pushed by graesslin into branch 'master'.

[kcmkwin/compositing] Fix storing of PluginEnabled states

M  +2    -3    kcmkwin/kwincompositing/model.cpp

http://commits.kde.org/kwin/220c3caf140ff557796ee75947607e1726a1a60b