[kcmkwin/compositing] Fix storing of PluginEnabled states

BUG: 334812